2006-06-04  Andreas Köhler  <andi5.py@gmx.net>

	* src/gnome-utils/gnc-html.[ch]:
	* src/report/report-gnome/gnc-plugin-page-report.c: Add
	  gnc_html_copy and enable report pages to copy to clipboard.
	  Fixes #343645.

	* src/gnome/gnc-plugin-page-register.c: Readd descriptions for
	  Cut/Copy/Paste actions in register pages.

2006-06-03  Derek Atkins  <derek@ihtfp.com>

	* src/engine/Split.c:
	  Properly round values when setting the Base Value.  Fixes #337505.
	* src/business/dialog-tax-table/tax-tables.glade:
	  fix a string.  It should be "Edit" not "gtk-edit".  This string
	  is already translated, so shouldn't be an issue for the string
	  freeze.

2006-06-03  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/ui/gnc-plugin-page-register-ui.xml:
	* src/gnome/ui/gnc-plugin-page-account-tree-ui.xml:
	* src/gnome/glade/lots.glade:
	* src/gnome/gnc-plugin-page-account-tree.c: 
	* src/gnome/gnc-plugin-page-register.c: 
	* src/gnome/lot-viewer.c: Re-enable View Lots; disable 'View' button.  Fix
	clist/lot-title handling bug.  Bug#343772.

2006-06-03  David Hampton  <hampton@employees.org>

	* src/register/register-gnome/combocell-gnome.c:
	* src/register/register-gnome/gnucash-item-list.[ch]: Only use the
	amount of space required to show all the entries in the popup, not
	all the available space. Fixes #343242.

	* src/register/register-gnome/gnucash-sheet.c: The register code
	shouldn't process any keystrokes that have a "modifier" (e.g. Alt,
	Meta, etc.) key pressed.  This allows Alt-Ctl-Pgup/Down in a
	register to change the notebook page, just like from the accounts
	page. Also remove some dead code.

>>>>>>> .r14316
2006-06-03  Andreas Köhler  <andi5.py@gmx.net>

	* src/gnome-utils/Makefile.am:
	* src/gnome-utils/druid-gnc-xml-import.c:
	* src/backend/file/io-gncxml-v2.h: Link gnome-utils against
	  backend/file and remove symbol lookup in druid-gnc-xml-import.c.

	* src/register/register-gnome/gnucash-sheet.c: Add GDK_Menu as