@@ -934,10 +934,10 @@ ld_get_pmt_formula( LoanDruidData *ldd, GString *gstr )
 {
         g_assert( ldd != NULL );
         g_assert( gstr != NULL );
-        g_string_append_printf( gstr, "pmt( %.5f / 12 : %d : %0.2f : 0 : 0 )",
+        g_string_append_printf( gstr, "pmt( %.5f / 12 : %0.2f : %0.2f : 0 : 0 )",
                                 (ldd->ld.interestRate / 100),
                                 ( ldd->ld.numPer
-                                  * ( ldd->ld.perSize == MONTHS ? 1 : 12 ) ),
+                                  * ( ldd->ld.perSize == MONTHS ? 1 : 12 ) ) * 1.,
                                 gnc_numeric_to_double(ldd->ld.principal) );
 }
 
@@ -947,10 +947,10 @@ ld_get_ppmt_formula( LoanDruidData *ldd, GString *gstr )
 {
         g_assert( ldd != NULL );
         g_assert( gstr != NULL );
-        g_string_printf( gstr, "ppmt( %.5f / 12 : i : %d : %0.2f : 0 : 0 )",
+        g_string_printf( gstr, "ppmt( %.5f / 12 : i : %0.2f : %0.2f : 0 : 0 )",
                          (ldd->ld.interestRate / 100),
                          ( ldd->ld.numPer
-                           * ( ldd->ld.perSize == MONTHS ? 1 : 12 ) ),
+                           * ( ldd->ld.perSize == MONTHS ? 1 : 12 ) ) * 1.,
                          gnc_numeric_to_double(ldd->ld.principal));
 }
 
@@ -960,10 +960,10 @@ ld_get_ipmt_formula( LoanDruidData *ldd, GString *gstr )
 {
         g_assert( ldd != NULL );
         g_assert( gstr != NULL );
-        g_string_printf( gstr, "ipmt( %.5f / 12 : i : %d : %0.2f : 0 : 0 )",
+        g_string_printf( gstr, "ipmt( %.5f / 12 : i : %0.2f : %0.2f : 0 : 0 )",
                          (ldd->ld.interestRate / 100),
                          ( ldd->ld.numPer
-                           * ( ldd->ld.perSize == MONTHS ? 1 : 12 ) ),
+                           * ( ldd->ld.perSize == MONTHS ? 1 : 12 ) ) * 1.,
                          gnc_numeric_to_double( ldd->ld.principal ) );
 }
 
