@@ -1,3 +1,9 @@
+2006-06-04  Joshua Sled  <jsled@asynchronous.org>
+
+	* src/gnome/druid-loan.c (ld_get_pmt_formula)
+	(ld_get_ppmt_formula, ld_get_ipmt_formula): Treat all numbers in a
+	auto-decimal-point-safe way.  Bug#343795.
+
 2006-06-04  Andreas Köhler  <andi5.py@gmx.net>
 
 	* src/gnome-utils/gnc-html.[ch]:
